--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         </div>
 
         <nav class="primary" aria-label="Main navigation">
-          <a href="#downloads" id="navDownloads">📥 Downloads</a>
+          <a href="#home" id="navDownloads">📥 Downloads</a>
         </nav>
       </div>
 
@@ -388,7 +388,7 @@
     <div id="timeDisplay" class="time-display">Loading time...</div>
   </section>
 
-  <main class="container" id="downloads" role="main">
+  <main class="container" id="home" role="main">
     <h2>📥 Essential File Downloads</h2>
     <div class="platform-buttons" role="list">
       <a href="Growfax_VirtualHost.txt" class="btn-android" data-filename="Growfax_VirtualHost.txt" data-filekey="virtualhost" download role="listitem">
