--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
         </div>
 
         <nav class="primary" aria-label="Main navigation">
-          <a href="#home" id="navDownloads">📥 Downloads</a>
-        </nav>
+          <a href="/home" id="navDownloads">📥 Downloads</a> </nav>
       </div>
 
       <div class="controls">
