--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
         </div>
 
         <nav class="primary" aria-label="Main navigation">
-          <a href="/home" id="navDownloads">📥 Downloads</a> </nav>
+          <a href="https://growfax.web.id/home" id="navDownloads">📥 Downloads</a> 
+        </nav>
       </div>
 
       <div class="controls">
