--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Growfax Official</title>
+<title>Growfax Official - Private Growtopia Server & Downloads</title>
 <link rel="icon" href="Growfax_banner.jpg" type="image/jpeg">
 
+<meta name="description" content="Situs resmi Growfax, private server Growtopia. Unduh file host terbaru untuk Android, Windows, dan iOS. Mainkan Growtopia dengan fitur eksklusif dan komunitas aktif!" />
+<meta name="keywords" content="Growfax, Growtopia Private Server, Growtopia PS, Download Growfax, Host Growtopia, Growfax Android, Growfax Windows" />
+<meta name="robots" content="index, follow" />
+<link rel="canonical" href="https://growfax.web.id/home" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://growfax.web.id/home" />
+<meta property="og:title" content="Growfax Official - Private Growtopia Server & Downloads" />
+<meta property="og:description" content="Unduh file host terbaru untuk Growfax Private Server (Android, Windows, iOS) dan bergabunglah dengan komunitas Discord kami." />
+<meta property="og:image" content="https://growfax.web.id/Growfax_banner.jpg" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://growfax.web.id/home" />
+<meta name="twitter:title" content="Growfax Official - Private Growtopia Server & Downloads" />
+<meta name="twitter:description" content="Unduh file host terbaru untuk Growfax Private Server (Android, Windows, iOS) dan bergabunglah dengan komunitas Discord kami." />
+<meta name="twitter:image" content="https://growfax.web.id/Growfax_banner.jpg" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
