--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
         <nav class="primary" aria-label="Main navigation">
           <a href="https://growfax.web.id/home" id="navDownloads">📥 Downloads</a> 
-          <a href="https://growfax.web.id/shop" id="navShop">🛒 Shop</a> </nav>
+        </nav>
       </div>
 
       <div class="controls">
@@ -667,7 +667,6 @@ const translations = {
   id: {
     "Growfax Official": "Growfax Resmi",
     "📥 Downloads": "📥 Unduhan",
-    "🛒 Shop": "🛒 Toko", // New: Shop link for navigation
     "Welcome to Growfax": "Selamat Datang di Growfax",
     "Private Growtopia Server": "Server Growtopia Pribadi",
     "Local Time (New York):": "Waktu Lokal (New York):",
